[project]
name = "token-runtime-id"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pylint>=3.0.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportUnnecessaryIsInstance = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
