[project]
name = "token-runtime-id"
version = "0.1.0"
authors = [
  { name="Alexey Puchkov", email="alexey@token.security" },
]
description = "A lightweight Python library for adding traceable runtime IDs to your logs"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/token-security/token-runtime-id"
"Bug Tracker" = "https://github.com/token-security/token-runtime-id/issues"
"Repository" = "https://github.com/token-security/token-runtime-id"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pylint>=3.0.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportUnnecessaryIsInstance = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
